objects/SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>UnitBody__c</fullName>
        <formula>UnitBodyLink__r.UnitBody__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体号機</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateStatus__c</fullName>
        <label>契約更新状況</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkCompletionDateFormula__c</fullName>
        <formula>Datevalue(WorkCompletionDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>作業完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkCompletionDate__c</fullName>
        <label>作業完了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>seikyusakiAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>請求先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>販売オーダ (請求先)</relationshipLabel>
        <relationshipName>SalesOrders_SeikyusakiAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>販売オーダ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>SeishikiShoriDateFormula__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>MS2</fullName>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>SalesOrderType__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>NAME</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>Area__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>ShipmentFacultyOffice__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>MaintenanceContract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>MS16</value>
        </filters>
        <filters>
            <field>SalesOffice__c</field>
            <operation>startsWith</operation>
        </filters>
        <filters>
            <field>SalesOrderType__c</field>
            <operation>startsWith</operation>
            <value>保守契約</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>contains</operation>
            <value>名古屋</value>
        </filters>
        <label>MS 大阪</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>NM11</fullName>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>SalesOrderType__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>NAME</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>Area__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>ShipmentFacultyOffice__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>SalesOffice__c</field>
            <operation>startsWith</operation>
            <value>S0171</value>
        </filters>
        <filters>
            <field>SundeosameBody__c</field>
            <operation>notContain</operation>
            <value>NM</value>
        </filters>
        <label>NM 福岡支店</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>NM14</fullName>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>SeishikiShoriDateFormula__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>J</value>
        </filters>
        <label>ＭＥ営業</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>NM15</fullName>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>SalesOrderType__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>NAME</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>Area__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>ShipmentFacultyOffice__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>SalesOffice__c</field>
            <operation>startsWith</operation>
            <value>S0</value>
        </filters>
        <filters>
            <field>SalesOrderTypeCode__c</field>
            <operation>startsWith</operation>
            <value>1B1</value>
        </filters>
        <label>NM 国内貸与</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>NM_JRI</fullName>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>SalesOrderType__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>NAME</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>Area__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>ShipmentFacultyOffice__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>SalesOffice__c</field>
            <operation>startsWith</operation>
            <value>R0</value>
        </filters>
        <filters>
            <field>SalesOrderTypeCode__c</field>
            <operation>startsWith</operation>
            <value>1B1</value>
        </filters>
        <label>NM 国内貸与 JRI売上</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SI</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>OrderDateFormula__c</columns>
        <columns>ContractDivision__c</columns>
        <columns>Series__c</columns>
        <columns>NAME</columns>
        <columns>SalesStaff__c</columns>
        <columns>SalesAccountName__c</columns>
        <columns>ShipmentAccountName__c</columns>
        <columns>ConsumptionTax__c</columns>
        <columns>ServiceAmount__c</columns>
        <columns>UndecidedOrderAmount__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>FlagshipProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesOffice__c</field>
            <operation>equals</operation>
            <value>S0161</value>
        </filters>
        <filters>
            <field>CarryDeliveryTimeFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2016</value>
        </filters>
        <filters>
            <field>OrderType__c</field>
            <operation>equals</operation>
            <value>装置</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>CA,TP,BS</value>
        </filters>
        <filters>
            <field>SalesOrderType__c</field>
            <operation>equals</operation>
            <value>製品売上</value>
        </filters>
        <filters>
            <field>ContractDivision__c</field>
            <operation>notEqual</operation>
            <value>見込</value>
        </filters>
        <filters>
            <field>AssistantCode__c</field>
            <operation>notEqual</operation>
            <value>01105902</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2017</value>
        </filters>
        <label>★広島SI★</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SI1</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>OrderDateFormula__c</columns>
        <columns>ContractDivision__c</columns>
        <columns>Series__c</columns>
        <columns>NAME</columns>
        <columns>SalesStaff__c</columns>
        <columns>SalesAccountName__c</columns>
        <columns>ShipmentAccountName__c</columns>
        <columns>ConsumptionTax__c</columns>
        <columns>ServiceAmount__c</columns>
        <columns>UndecidedOrderAmount__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>FlagshipProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesOffice__c</field>
            <operation>equals</operation>
            <value>S0161</value>
        </filters>
        <filters>
            <field>CarryDeliveryTimeFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2016</value>
        </filters>
        <filters>
            <field>OrderType__c</field>
            <operation>equals</operation>
            <value>装置</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TP</value>
        </filters>
        <filters>
            <field>SalesOrderType__c</field>
            <operation>equals</operation>
            <value>製品売上</value>
        </filters>
        <filters>
            <field>ContractDivision__c</field>
            <operation>notEqual</operation>
            <value>見込</value>
        </filters>
        <filters>
            <field>AssistantCode__c</field>
            <operation>notEqual</operation>
            <value>01105902</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>★広島SI★ 栃木</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SI2</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>OrderDateFormula__c</columns>
        <columns>ContractDivision__c</columns>
        <columns>Series__c</columns>
        <columns>NAME</columns>
        <columns>SalesStaff__c</columns>
        <columns>SalesAccountName__c</columns>
        <columns>ShipmentAccountName__c</columns>
        <columns>ConsumptionTax__c</columns>
        <columns>ServiceAmount__c</columns>
        <columns>UndecidedOrderAmount__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>FlagshipProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesOffice__c</field>
            <operation>equals</operation>
            <value>S0161</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>OrderType__c</field>
            <operation>equals</operation>
            <value>パーツ</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>J</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>PJ,CA,PS</value>
        </filters>
        <filters>
            <field>SalesOrderType__c</field>
            <operation>equals</operation>
            <value>受託分析</value>
        </filters>
        <label>★広島SI★(受託)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SI4</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>OrderDateFormula__c</columns>
        <columns>ContractDivision__c</columns>
        <columns>Series__c</columns>
        <columns>NAME</columns>
        <columns>SalesStaff__c</columns>
        <columns>SalesAccountName__c</columns>
        <columns>ShipmentAccountName__c</columns>
        <columns>ConsumptionTax__c</columns>
        <columns>ServiceAmount__c</columns>
        <columns>UndecidedOrderAmount__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>FlagshipProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesOffice__c</field>
            <operation>equals</operation>
            <value>S0161</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>OrderType__c</field>
            <operation>equals</operation>
            <value>装置</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>J</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>PJ,CA,PS,JX</value>
        </filters>
        <filters>
            <field>SalesOrderType__c</field>
            <operation>equals</operation>
            <value>保守契約</value>
        </filters>
        <label>★広島SI★(保守)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SVC</fullName>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>SeishikiShoriDateFormula__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>SalesOrderType__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>J</value>
        </filters>
        <label>ＭＥ　SVC</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SVC1</fullName>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>SeishikiShoriDateFormula__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>SalesOrderType__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderStatus__c</columns>
        <columns>ProductNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductNumber__c</field>
            <operation>startsWith</operation>
            <value>CA,LC</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>ProductNumber__c</field>
            <operation>contains</operation>
            <value>920,930,932,933,934,939,1132,1140</value>
        </filters>
        <filters>
            <field>SalesOrderType__c</field>
            <operation>notEqual</operation>
            <value>製品売上</value>
        </filters>
        <label>ＭＥ　SVC(全て）</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View25</fullName>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>SeishikiShoriDateFormula__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>contains</operation>
            <value>東京支店,横浜事務所,筑波支店</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Ｊ</value>
        </filters>
        <label>東京支店　ＭＥ営業</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View26</fullName>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>SeishikiShoriDateFormula__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>仙台支店</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Ｊ</value>
        </filters>
        <label>仙台支店　ＭＥ営業</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View27</fullName>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>FlagshipProduct__c</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>OrderAmount__c</columns>
        <columns>SeishikiShoriDateFormula__c</columns>
        <columns>CarryDeliveryTimeFormula__c</columns>
        <columns>ContractsDivision__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>OrderStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>OrderDateFormula__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>名古屋支店</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Ｊ</value>
        </filters>
        <label>名古屋支店　ＭＥ営業</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>販売オーダNo</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>HosyuKeiyaku</fullName>
        <active>true</active>
        <label>保守契約詳細</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType_Delete</fullName>
        <active>true</active>
        <label>取消</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesOrder</fullName>
        <active>true</active>
        <label>販売オーダ</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BumonRoleSharing__c</fullName>
        <label>部門のロールへの共有</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KeiretsuRoleSharing__c</fullName>
        <label>系列のロールへの共有</label>
    </sharingReasons>
</CustomObject>